updated user handler swagger annotations.
- added authentication to swagger.
- added Security annotation comments to task handlers.
