# task-manager/internal/http/handlers/user_handler.go
@@ -30,24 +30,37 @@ func (handler *UserHandler) RegisterRoutes(group *echo.Group, routePrefix string
 }
 
 // @Router /api/v1/users/login [post]
-// @Summary Login user
+// @Summary Login with existing user
+// @Description Returns token for valid authentication
+// @Accept application/x-www-form-urlencoded
+// @Produce json
+// @Param email formData string true "User email"
+// @Param password formData string true "User password" format(password)
+// @Success 201 {object} map[string]interface{} "access_token"
+// @Failure 400
+// @Failure 404
+// @Failure 500
 func (handler *UserHandler) loginHandler(c echo.Context) error {
 	email := c.FormValue("email")
 	password := c.FormValue("password")
 
-	user, err := handler.service.GetUser(email)
-	if err != nil {
-		return c.String(http.StatusNotFound, err.Error())
+	if len(email) == 0 || len(password) == 0 {
+		return c.JSON(http.StatusBadRequest, nil)
 	}
 
-	if email != user.Email || password != user.Password {
-		return echo.ErrUnauthorized
+	registeredUser, err := handler.service.GetUser(email)
+	if err != nil {
+		return err
+	}
+
+	if email != registeredUser.Email || password != registeredUser.Password {
+		return c.JSON(http.StatusUnauthorized, nil)
 	}
 
 	claims := &jwtClaims{
-		user.Email,
+		registeredUser.Email,
 		jwt.RegisteredClaims{
-			ID:        user.ID.String(),
+			ID:        registeredUser.ID.String(),
 			ExpiresAt: jwt.NewNumericDate(time.Now().Add(time.Hour * 24)),
 		},
 	}
@@ -65,7 +78,15 @@ func (handler *UserHandler) loginHandler(c echo.Context) error {
 }
 
 // @Router /api/v1/users/register [post]
-// @Summary Registers user
+// @Summary Register new user
+// @Description Registers new user
+// @Accept application/x-www-form-urlencoded
+// @Produce json
+// @Param email formData string true "User email"
+// @Param password formData string true "User password" format(password)
+// @Success 201 {object} user.User
+// @Failure 400
+// @Failure 500
 func (handler *UserHandler) registerHandler(c echo.Context) error {
 	email := c.FormValue("email")
 	password := c.FormValue("password")
@@ -75,14 +96,19 @@ func (handler *UserHandler) registerHandler(c echo.Context) error {
 		return c.String(http.StatusInternalServerError, err.Error())
 	}
 
-	return c.JSON(http.StatusOK, echo.Map{
+	return c.JSON(http.StatusCreated, echo.Map{
 		"user": user,
 	})
 }
 
 // @Router /api/v1/users [get]
-// @Summary Login user
+// @Summary Get user info
+// @Description Returns authenticated user
+// @Produce json
+// @Success 200 {object} user.User
+// @Failure 500
 func (handler *UserHandler) getUserHandler(c echo.Context) error {
+	// TODO: return authenticated user
 	email := c.FormValue("email")
 	user, err := handler.service.GetUser(email)
 	if err != nil {
